fix low-res and animation timing
replace loader-play with svg
fix timing on loader
fix ff not showing first dot

--- a/assets/scss/loader.scss
+++ b/assets/scss/loader.scss
@@ -11,95 +11,88 @@
   @include transition(opacity .2s ease-in-out);
   width: 100%;
 
-  &.loading {
-    opacity: 1;
-    z-index: 10000000000;
-  }
-
   .loader {
-      height: 80px;
-      margin: -40px 0 0 -40px;
+    background: url(/images/loader-play.svg) no-repeat center center;
+    background-size: 25px 38px;
+    display: none;
+    height: 80px;
+    margin: -50px auto 0;
+    position: relative;
+      top: 50%;
+    width: 80px;
+
+    > div {
+      background-color: #999;
+      @include border-radius(50%);
+      height: 8px;
       position: absolute;
-        top: 50%;
-        left: 50%;
-      width: 80px;
+      opacity: 0;
+      width: 8px;
 
-    img {
-        position: absolute;
-          top: 0;
-          left: 0;
-
-      &.play {
+      &:nth-child(1) {
+          @include animation(spin 1s linear -.875s infinite);
           left: 50%;
-          margin: -17px 0 0 -8px;
-          opacity: 0.75;
-          top: 50%;
-      }
-  }
-
-  .dot {
-    background-color: #999;
-    @include border-radius(50%);
-    height: 8px;
-    position: absolute;
-    opacity: 0;
-    width: 8px;
-
-      &.dot-1 {
-        @include animation(spin 1s linear 0 infinite);
-        left: 50%;
-        margin: 0 0 0 -4px;
-        top: 0;
+          margin: 0 0 0 -4px;
+          top: 0;
       }
 
-      &.dot-2 {
-        @include animation(spin 1s linear 0.125s infinite);
+      &:nth-child(2) {
+        @include animation(spin 1s linear -.75s infinite);
         left: 20%;
         margin: -4px 0 0 -4px;
         top: 20%;
       }
 
-      &.dot-3 {
-        @include animation(spin 1s linear 0.25s infinite);
+      &:nth-child(3) {
+        @include animation(spin 1s linear -.625s infinite);
         left: 0;
         margin: -4px 0 0 0;
         top: 50%;
       }
 
-      &.dot-4 {
-        @include animation(spin 1s linear 0.375s infinite);
+      &:nth-child(4) {
+        @include animation(spin 1s linear -.5s infinite);
         left: 20%;
         margin: -4px 0 0 -4px;
         top: 82%;
       }
 
-      &.dot-5 {
-        @include animation(spin 1s linear 0.5s infinite);
+      &:nth-child(5) {
+        @include animation(spin 1s linear -.375s infinite);
         left: 50%;
         margin: -4px 0 0 -4px;
         top: 95%;
       }
 
-      &.dot-6 {
-        @include animation(spin 1s linear 0.625s infinite);
+      &:nth-child(6) {
+        @include animation(spin 1s linear -.25s infinite);
         left: 80%;
         margin: -4px 0 0 -4px;
         top: 82%;
       }
 
-      &.dot-7 {
-        @include animation(spin 1s linear 0.75s infinite);
+      &:nth-child(7) {
+        @include animation(spin 1s linear -.125s infinite);
         left: 95%;
         margin: -4px 0 0 -4px;
         top: 50%;
       }
 
-      &.dot-8 {
-        @include animation(spin 1s linear 0.875s infinite);
+      &:nth-child(8) {
+        @include animation(spin 1s linear 0s infinite);
         left: 80%;
         margin: -4px 0 0 -4px;
         top: 20%;
       }
+    }
+  }
+
+  &.loading {
+    opacity: 1;
+    z-index: 10000000000;
+
+    .loader {
+      display: block;
     }
   }
 }
@@ -123,8 +116,8 @@
       position: relative;
         top: -20px;
       text-align: center;
-      text-shadow: 0 1px 1px rgba(0,0,0,0.75);
-      @include transition-transforms(0.75s);
+      text-shadow: 0 1px 1px rgba(0,0,0,.75);
+      @include transition-transforms(.75s);
       width: 60px;
     }
   }
@@ -141,7 +134,7 @@
     position: absolute;
       right: 0;
       left: 0;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.75);
+    text-shadow: 0 1px 1px rgba(0,0,0,.75);
     @include transform-3d(0,-150%,0);
     @include transition(all 1.5s 50ms);
 
@@ -159,7 +152,7 @@
   a {
     color: $grey-dark;
     cursor: pointer;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.75);
+    text-shadow: 0 1px 1px rgba(0,0,0,.75);
 
     &:hover {
       color: #ddd;
@@ -168,7 +161,7 @@
   }
 
   p {
-    @include animation(dropIn 0.5s forwards 1s ease-in-out);
+    @include animation(dropIn .5s forwards 1s ease-in-out);
     display: block;
     color: #bbb;
     float: none;
@@ -181,12 +174,12 @@
       z-index: 1;
     opacity: 0;
     text-align: center;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.75);
+    text-shadow: 0 1px 1px rgba(0,0,0,.75);
     @include transform-3d(0,-100%,0);
   }
 
   button {
-    @include animation(dropIn 0.5s forwards 15s ease-in-out);
+    @include animation(dropIn .5s forwards 15s ease-in-out);
     display: block;
     margin: 70px auto 0;
     opacity: 0;
@@ -201,7 +194,7 @@
 
 #output-results-container {
   h1 {
-    @include animation(loaderText 0.2s forwards);
+    @include animation(loaderText .2s forwards);
     color: #999;
     margin: 0;
     text-shadow: none;
